Salesforce/main/default/objects/Produto_Vendedor_DMValoriza__c/fields/NFe__c.field-meta.xml
<CustomField>
    <fullName>NFe__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nota Fiscal Eletrônica</label>
    <referenceTo>Nota_Fiscal_Eletr_nica__c</referenceTo>
    <relationshipLabel>Produtos Vendedor DMValoriza</relationshipLabel>
    <relationshipName>Produtos_Vendedor_DMValoriza</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>