Salesforce/main/default/objects/Produto_Vendedor_DMValoriza__c/fields/Quantidade_Kg__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Kg__c</fullName>
    <label>Quantidade Kg</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>