Salesforce/main/default/objects/Produto_Vendedor_DMValoriza__c/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variedad</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Produtos Vendedor DMValoriza</relationshipLabel>
    <relationshipName>Produtos_Vendedor_DMValoriza</relationshipName>
    <type>Lookup</type>
</CustomField>